--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -48,7 +48,6 @@
     border-radius: 10px;
     padding: 10px;
     margin: 10px 0;
-    max-height: 17%;
     font-family: 'futura';
   }
   
@@ -60,4 +59,11 @@
   .stat p {
     margin-top: 0;
     font-size: 150%;
+  }
+
+  .scrollableDiv2 {
+    height: 500px; 
+    overflow: auto;
+    display: flex; 
+    flex-direction: column; 
   }
